# au10-miin

./: CMakeLists.txt  Makefile  lv_conf.h  lv_drv_conf.h  test.db
lv_drivers/display/: fbdev.c  sunxifb.c  sunxig2d.c  sunxig2d.h  sunximem.c
lv_drivers/indev/: evdev.c
lv_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
lv_ui/components/: ui_comp.c  ui_comp.h  ui_comp_grp_table_mode.c  ui_comp_grp_table_mode.h  ui_comp_hook.c  ui_comp_hook.h
lv_ui/fonts/: ui_font_EbrimaBold16.c  ui_font_EbrimaBold20.c  ui_font_EbrimaBold40.c  ui_font_Futura20.c  ui_font_Medium18.c
lv_ui/images/: ui_img_1064d_0_png.c  ui_img_1064d_1_png.c  ui_img_1064s_0_png.c  ui_img_1064s_1_png.c  ui_img_34px_png.c  ui_img_532_0_png.c  ui_img_532_1_png.c  ui_img_532_2_png.c  ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_arrow_up_png.c  ui_img_btn_pad_top1_png.c  ui_img_btn_pass0_png.c  ui_img_button70_0_png.c  ui_img_button70_1_png.c  ui_img_guage0_png.c  ui_img_guage1_png.c  ui_img_icon_miin_png.c  ui_img_intro_0_png.c  ui_img_logo_bt_png.c  ui_img_logo_ltra_pass_png.c  ui_img_logo_ltra_png.c  ui_img_logo_miin_png.c  ui_img_logo_pl_png.c  ui_img_memory1_b_png.c  ui_img_memory1_g_png.c  ui_img_memory1_r_png.c  ui_img_memory2_b_png.c  ui_img_memory2_g_png.c  ui_img_memory2_r_png.c  ui_img_memory3_b_png.c  ui_img_memory3_g_png.c  ui_img_memory3_r_png.c  ui_img_miin_0_png.c  ui_img_miin_1_png.c  ui_img_mp_0_png.c  ui_img_mp_1_png.c  ui_img_password_title_png.c  ui_img_quasi_0_png.c  (+26 more)
lv_ui/screens/: ui_ScreenCalibration.c  ui_ScreenLoading.c  ui_ScreenMain.c  ui_ScreenPreset.c  ui_ScreenProduct.c
mqtt/: CMakeLists.txt  mqtt.c  mqtt.h  mqtt_client.c  mqtt_client.h
sqlite/: CMakeLists.txt
src/: cli.c  cli.h  config.c  config.h  ezini.c  ezini.h  fb2bmp.c  fb2bmp.h  functions.c  functions.h  gpio.c  gpio.h  main.c  main.h  ntp.c  ntp.h  ringbuf.c  ringbuf.h  sound.c  sound.h  sqlite.c  sqlite.h  uart.c  uart.h  ui_calibration.c  ui_calibration.h  ui_loading.c  ui_loading.h  ui_main.c  ui_main.h  ui_msg.c  ui_msg.h  ui_preset.c  ui_preset.h  ui_product.c  ui_product.h
