SET(SOURCES components/ui_comp_grp_table_mode.c
    components/ui_comp.c
    screens/ui_ScreenLoading.c
    screens/ui_ScreenProduct.c
    screens/ui_ScreenCalibration.c
    screens/ui_ScreenMain.c
    screens/ui_ScreenPreset.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_intro_0_png.c
    images/ui_img_logo_ltra_png.c
    images/ui_img_button70_1_png.c
    images/ui_img_password_title_png.c
    images/ui_img_logo_ltra_pass_png.c
    images/ui_img_ready_0_png.c
    images/ui_img_ready_1_png.c
    images/ui_img_ready_2_png.c
    images/ui_img_arrow_left_png.c
    images/ui_img_arrow_right_png.c
    images/ui_img_table_t_png.c
    images/ui_img_ltra_gui_main0_png.c
    images/ui_img_logo_miin_png.c
    images/ui_img_logo_bt_png.c
    images/ui_img_logo_pl_png.c
    images/ui_img_t0_png.c
    images/ui_img_t1_png.c
    images/ui_img_t2_png.c
    images/ui_img_t3_png.c
    images/ui_img_t4_png.c
    images/ui_img_vol32_0_png.c
    images/ui_img_vol32_1_png.c
    images/ui_img_vol32_2_png.c
    images/ui_img_vol32_3_png.c
    images/ui_img_guage0_png.c
    images/ui_img_guage1_png.c
    images/ui_img_sec_dot_png.c
    images/ui_img_arrow_down_png.c
    images/ui_img_arrow_up_png.c
    images/ui_img_setup_png.c
    images/ui_img_txt_bg_png.c
    images/ui_img_1064s_0_png.c
    images/ui_img_1064s_1_png.c
    images/ui_img_1064d_0_png.c
    images/ui_img_1064d_1_png.c
    images/ui_img_quasi_0_png.c
    images/ui_img_quasi_1_png.c
    images/ui_img_532_0_png.c
    images/ui_img_532_2_png.c
    images/ui_img_miin_0_png.c
    images/ui_img_miin_1_png.c
    images/ui_img_txt_bg_0_png.c
    images/ui_img_memory1_b_png.c
    images/ui_img_memory1_r_png.c
    images/ui_img_memory1_g_png.c
    images/ui_img_memory2_b_png.c
    images/ui_img_memory2_r_png.c
    images/ui_img_memory2_g_png.c
    images/ui_img_memory3_b_png.c
    images/ui_img_memory3_r_png.c
    images/ui_img_memory3_g_png.c
    images/ui_img_spot_spot_00_png.c
    images/ui_img_spot_spot_01_png.c
    images/ui_img_spot_spot_02_png.c
    images/ui_img_spot_spot_03_png.c
    images/ui_img_spot_spot_04_png.c
    images/ui_img_spot_spot_05_png.c
    images/ui_img_spot_spot_06_png.c
    images/ui_img_spot_spot_07_png.c
    images/ui_img_spot_spot_08_png.c
    images/ui_img_532_1_png.c
    images/ui_img_btn_pad_top1_png.c
    images/ui_img_btn_pass0_png.c
    images/ui_img_button70_0_png.c
    images/ui_img_mp_0_png.c
    images/ui_img_mp_1_png.c
    fonts/ui_font_EbrimaBold16.c
    fonts/ui_font_EbrimaBold20.c
    fonts/ui_font_EbrimaBold40.c
    fonts/ui_font_Futura20.c
    fonts/ui_font_Medium18.c)

add_library(ui ${SOURCES})
